--- a/collab/style.css
+++ b/collab/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
+    font-family: "Roboto", sans-serif;
 }
 
 .topLine {
@@ -12,4 +12,6 @@
     justify-content: center;
     align-items: center;
     background-color: #60267F;
+    font-family: "DM Sans", sans-serif;
+    color: white;
 }
