--- a/collab/style.css
+++ b/collab/style.css
@@ -15,3 +15,84 @@
     font-family: "DM Sans", sans-serif;
     color: white;
 }
+
+.learnMore {
+    border-bottom: 2px solid white;
+}
+
+.menuContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 30px;
+}
+
+.logoImg {
+    width: 150px;
+}
+.topNavContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topUlcontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-right: 30px;
+}
+
+.topUlcontainer li {
+    list-style: none;
+}
+
+.topUlcontainer li a {
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600px;
+    color: #9A54BC;
+}
+
+.reqestDemoTop {
+    padding: 10px 20px;
+    background-color: transparent;
+
+
+}
+
+.reqestDemoTop:hover {
+
+}
+
+.mainContainerSectionOne {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    margin-top: 100px;
+    background-color: #9A54BC;
+    padding: 30px 20px;
+    gap: 50px;
+}
+
+.topHead {
+    font-size: 36px;
+    text-align: center;
+    width: 60%;
+}
+
+.topHeadBtn {
+    padding: 15px 25px;
+    background-color: #9A54BC;
+    color: white;
+    border-radius: 5px;
+    border: 2px solid #9A54BC;
+}
+
+.topHeadBtn:hover {
+    background-color: transparent;
+    color: #9A54BC;
+    cursor: pointer;
+}
