--- a/collab/style.css
+++ b/collab/style.css
@@ -24,7 +24,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 30px;
+    padding: 20px 30px;
+    box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.35);
+    -webkit-box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.35);
+    -moz-box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.35);
 }
 
 .logoImg {
@@ -51,19 +54,22 @@
 .topUlcontainer li a {
     text-decoration: none;
     font-family: "Roboto", sans-serif;
-    font-weight: 600px;
-    color: #9A54BC;
+    font-weight: 600;
+    color: #2B0236;
 }
 
 .reqestDemoTop {
-    padding: 10px 20px;
+    padding: 10px 25px;
     background-color: transparent;
-
-
+    border-radius: 5px;
+    border: 2px solid #9A54BC;
+    color: #9A54BC;
+    font-size: 16px;
 }
 
 .reqestDemoTop:hover {
-
+    background-color: #9A54BC;
+    color: white;
 }
 
 .mainContainerSectionOne {
@@ -71,8 +77,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    margin-top: 100px;
-    background-color: #9A54BC;
+    margin-top: 50px;
     padding: 30px 20px;
     gap: 50px;
 }
@@ -80,7 +85,8 @@
 .topHead {
     font-size: 36px;
     text-align: center;
-    width: 60%;
+    color: #2B0236;
+
 }
 
 .topHeadBtn {
