--- a/collab/style.css
+++ b/collab/style.css
@@ -355,7 +355,101 @@
 .bigCard {
     border: 0.5px solid #AAAAAA;
     padding: 20px;
-    width: 300px;
-    height: 500px;
-    border-radius: 4px;
+    width: 200px;
+    height: 350px;
+    border-radius: 7px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.bigCard span {
+    font-weight: 700;
+}
+
+.bigCard h2 {
+    font-size: 28px;
+}
+
+.bigCard button {
+    padding: 10px 15px;
+    border: none;
+    border: 2px solid #2B0236;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    font-weight: 700;
+    color: #2B0236;
+}
+
+.bigCard ul li {
+    list-style: none;
+    font-size: 12px;
+    margin-top: 10px;
+    padding: 0 0 0 5px;
+}
+
+.bigCard ul li::marker {
+    content: "▶";
+}
+
+.bigCardThree {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: #56E6A5;
+}
+
+.bigCardThree h2 {
+    width: 50%;
+}
+
+.bigCardThree p {
+    font-size: 12px;
+}
+
+.reviewContainer {
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 120px;
+}
+
+.stars {
+    width: 200px;
+}
+
+.reviewContainer p {
+    width: 700px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+}
+.revieParaContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.revieParaContainer::after {
+    content: "\F138";
+    font-family: bootstrap-icons;
+    font-size: 48px;
+}
+
+.revieParaContainer::before {
+    content: "\F12F";
+    font-family: bootstrap-icons;
+    font-size: 48px;
+}
+
+.reviewPhoto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
 }
