--- a/collab/style.css
+++ b/collab/style.css
@@ -353,7 +353,7 @@
 }
 
 .bigCard {
-    border: 0.5px solid #AAAAAA;
+    border: 0.3px solid #aaaaaa6f;
     padding: 20px;
     width: 200px;
     height: 350px;
@@ -425,12 +425,12 @@
     width: 700px;
     text-align: center;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 20px;
 }
 .revieParaContainer {
-    width: 100%;
+    width: 1200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
