--- a/collab/style.css
+++ b/collab/style.css
@@ -453,3 +453,190 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.PauliusContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+    gap: 20px;
+}
+.h2Paulius {
+  font-size: 36px;
+}
+.pPaulius {
+  font-weight: 400;
+  text-align: center;
+}
+.buttonPaulius {
+  padding: 15px 25px;
+  background-color: #9a54bc;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid #9a54bc;
+}
+.imgPaulius {
+    position: flex;
+    background-color: none;
+    border: none;
+    justify-content: center;
+    align-items: center;
+    width: 932px;
+    height: 240px;
+}
+.Veidas {
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  display: flexbox;
+ 
+}
+.one {
+ 
+  margin-right: 500px;
+ 
+}
+.two {
+   margin-left: 115px;
+  margin-top: 127px;
+}
+.three { margin-left: 272px;
+        margin-top: 107px;
+}
+.four { margin-left: 372px;
+        margin-top: 165px;
+ 
+}
+.five { margin-left: 490px ;
+      margin-top: 180px;
+}
+.six { margin-left: 666px ;
+margin-top: 146px; }
+ 
+.seven {margin-left: 800px ;
+  margin-top: 183px; }
+ 
+.eight {margin-left: 902px ;
+  margin-top: 87px;}
+ 
+.tu {position: absolute;
+  display: flexbox;
+  width: 70px;
+  margin-left: 801px ;
+  margin-top: 61px;}
+ 
+.juosta {
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  display: flexbox;
+  width: 932px;
+  }
+
+.violet {
+    width: auto;
+    height: 290px;
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #9A54BC;
+}
+
+.download {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-size: 33px;
+    line-height: 39px;
+    text-align: center;
+    color: white;
+}
+
+.vbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.vbtn1 {
+    width: 112px;
+    height: 32px;
+    border-radius: 3px;
+    border: none;
+    border: 1.5px solid #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    background-color: #FFFFFF;
+    color: #9A54BC;
+}
+
+.vbtn2 {
+    width: 112px;
+    height: 32px;
+    border-radius: 3px;
+    border: none;
+    border: 1.5px solid #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    background-color: #9A54BC;
+    color: white;
+}
+
+.vbtn3{
+    width: 112px;
+    height: 32px;
+    border-radius: 3px;
+    border: none;
+    border: 1.5px solid #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    background-color: #9A54BC;
+    color: white;
+}
+
+.valdas2 {
+    width: auto;
+    height: 290px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.klausimas {
+    font-family: "Roboto", sans-serif;
+    font-size: 21px;
+    font-weight: 500;
+    line-height: 14px;
+    text-align: center;
+    margin-left: 80px;
+}
+
+.vmap {
+    width: 500px;
+    height: 290px;
+    margin-left: 400px;
+}
+
+.vtext p {
+    font-family: "Roboto", sans-serif;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 14px;
+    text-align: center;
+    margin-top: 15px;
+    margin-left: 75px;
+}
