--- a/collab/style.css
+++ b/collab/style.css
@@ -640,3 +640,103 @@ margin-top: 146px; }
     margin-top: 15px;
     margin-left: 75px;
 }
+
+.contacts {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-left: 170px;
+}
+
+.lorem {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    margin-top: 10px;
+    text-align: left;
+}
+
+.follow {
+    color: #000000;
+    margin-top: 20px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.mediaIcons {
+    display: flex;
+    width: 26px;
+    height: 26px;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.blogas {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    margin-top: -135px;
+    gap: 100px;
+}
+
+.card {
+    margin-left: 400px;
+    
+}
+
+.blogas ul li {
+    list-style: none;
+}
+
+.blogas span {
+    font-family: "Roboto", sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 14px;
+    color: #000000;
+}
+
+.blogas ul li {
+    font-family: "Roboto", sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+    color: #60267F;
+    margin-top: 20px;
+}
+
+.email {
+    margin-top: 150px;
+    margin-left: -490px;
+}
+
+.email2 {
+    margin-top: 150px;
+    font-family: "Roboto", sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 14px;
+    color:#60267F;
+    margin-left: -50px;
+}
+
+.endLine {
+    width: 100%;
+    height: 60px;
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #60267F;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 400;
+    line-height: 14px;
+    font-size: 13px;
+    color: white;
+}
