--- a/bankas/b.css
+++ b/bankas/b.css
@@ -71,3 +71,140 @@
     background-color: #9A54BC;
     color: white;
 }
+
+body {
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+main {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+h2 {
+    text-align: center;
+}
+
+.seed {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-size: 10px;
+    color: gainsboro;
+    cursor: pointer;
+    &:hover {
+        color: gray;
+    }
+}
+
+button {
+    border: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
+    &.green {
+        background-color: lightgreen;
+    }
+    &.gray {
+        background-color: gray;
+    }
+    &.brown {
+        background-color: brown;
+    }
+    &.red {
+        background-color: crimson;
+    }
+}
+
+.modal {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: #00000070;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .card {
+        border: 3px solid black;
+        min-width: 600px;
+        min-height: 200px;
+        background-color: white;
+        .input {
+            margin: 20px;
+            div {
+                font-size: 10px;
+                color: gray;
+            }
+
+            input {
+                width: 300px;
+                font-size: 16px;
+            }
+
+        }
+
+        .buttons {
+            margin: 20px;
+        }
+    }
+}
+
+.products-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .products {
+        width: 100%;
+        max-width: 1200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .buttons {
+            margin: 20px 0;
+            width: 100%;
+            display: flex;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        .list {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .product {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+                div {
+                    padding: 10px;
+                    display: flex;
+                    height: 80px;
+                    align-items: center;
+                    width: 100%;
+                    box-sizing: border-box;
+                    gap: 20px;
+                    margin: 4px 0;
+                    background-color: skyblue;
+                    .id {
+                        font-weight: bold;
+                    }
+                    .title {
+                        font-size: 20px;
+                    }
+                    .price {
+                        font-style: italic;
+                    }
+                }
+            }
+        }
+    }
+} 
