--- a/bankas/b.css
+++ b/bankas/b.css
@@ -128,7 +128,7 @@ button {
     height: 100vh;
     position: absolute;
     background-color: #00000070;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     .card {
