--- a/bankas/b.css
+++ b/bankas/b.css
@@ -119,6 +119,9 @@ button {
     &.red {
         background-color: crimson;
     }
+    &.yellow {
+        background-color: yellow;
+    }
 }
 
 .modal {
@@ -197,10 +200,10 @@ button {
                     .id {
                         font-weight: bold;
                     }
-                    .title {
+                    .client {
                         font-size: 20px;
                     }
-                    .price {
+                    .money {
                         font-style: italic;
                     }
                 }
