--- a/bankas/b.css
+++ b/bankas/b.css
@@ -101,6 +101,12 @@ h2 {
     }
 }
 
+.product {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 button {
     border: none;
     cursor: pointer;
@@ -196,7 +202,7 @@ button {
                     box-sizing: border-box;
                     gap: 20px;
                     margin: 4px 0;
-                    background-color: skyblue;
+                    background-color: tomato;
                     .id {
                         font-weight: bold;
                     }
